<resources>
    <string name="app_name">A7S212021prac8</string>
    <string name="Titulo">Implementacion de Json</string>
    <string name="Tnombre">Ingrese su nombre</string>
    <string name="Tedad">Ingrese su edad</string>
    <string name="Tsexo">Ingrese su sexo</string>
    <string name="Tjson">Json</string>
    <string name="Tjos">Resultado Json</string>
    <string name="bJson">Convertir a Json</string>
    <string name="bclase">Convierte a clase</string>
</resources>